--- a/website/content/en/_index.html
+++ b/website/content/en/_index.html
@@ -16,7 +16,7 @@ linkTitle = "AKS Kubeflow"
 
 
 {{% blocks/lead color="primary" %}}
-The Kubeflow project is dedicated to making deployments of machine learning (ML) workflows on Kubernetes simple, portable and scalable. Our goal is not to recreate other services, but to provide a straightforward way to deploy best-of-breed open-source systems for ML to diverse infrastructures. Anywhere you are running Kubernetes, you should be able to run Kubeflow.
+The Kubeflow project is dedicated to making deployments of machine learning (ML) workflows on Kubernetes simple, portable and scalable. Our goal is not to recreate other services, but to provide a straightforward way to deploy best-of-breed open-source systems for ML on Azure Kubernetes Services. 
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
